--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
   </head>
 
   <body>
-
+  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=B7g5_R9opBtB8vdupe0RHJZBODc3Ayomgz1t7Y2rfag"></script>
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
