--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
     position: fixed;
     bottom: 10px;
     right: 10px;
-    transform: scale(0.6);
+    transform: scale(10);
     transform-origin: bottom right;
     z-index: 9999;
   }
@@ -40,6 +40,8 @@ layout: compress
 <div class="clustrmaps-container">
   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=B7g5_R9opBtB8vdupe0RHJZBODc3Ayomgz1t7Y2rfag"></script>
 </div>
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=4rFXIJCqSDwfhqu2_8OWG9k5_Lh2QKWHwsbdWo2izQ4&cl=ffffff&w=a"></script>
     {% include scripts.html %}
 
   </body>
